# remote-input

./: .gitignore  AGENTS.md  README.md  package-lock.json  rollup.config.mjs  tsconfig.json
.codex/: config.toml
.codex/skills/git-auto-push/: SKILL.md
.codex/skills/git-auto-push/agents/: openai.yaml
.superpowers/sdd/: task-1-report.md  task-2-report.md  task-3-report.md  task-4-report.md
docs/: firmware-architecture.md  remote-input-protocol.md  windows-enable-hexnumpad.md
docs/superpowers/plans/: 2026-06-29-esp32s3-web-bluetooth-hid-input.md  2026-06-30-firmware-esp-idf-structure.md  2026-06-30-lcd-status-display.md  2026-06-30-rgb-status-led.md  2026-07-01-runtime-device-config.md  2026-07-01-websocket-network-protocol.md  2026-07-02-base32-hid-decoder.md  2026-07-02-large-text-protocol-v2.md  2026-07-03-decoder-sdk.md
docs/superpowers/specs/: 2026-06-29-esp32s3-web-bluetooth-hid-input-design.md  2026-06-30-firmware-esp-idf-structure-design.md  2026-06-30-lcd-status-display-design.md  2026-06-30-rgb-status-led-design.md  2026-07-01-runtime-device-config-design.md  2026-07-01-websocket-network-protocol-design.md  2026-07-02-base32-hid-decoder-design.md  2026-07-02-large-text-protocol-v2-design.md  2026-07-03-decoder-sdk-design.md
firmware/: .gitignore  CMakeLists.txt  sdkconfig.defaults  sdkconfig.old
firmware/components/ai_input_core/: CMakeLists.txt  ai_input_status.c  ai_input_task.c  ai_input_utf8.c
firmware/components/ai_input_core/include/: ai_input_protocol.h
firmware/components/ai_input_device/: CMakeLists.txt  ai_input_service.c
firmware/components/ai_input_device/include/: ai_input_service.h
firmware/components/core/: CMakeLists.txt  engine.c  protocol.c  status.c  task.c  utf8.c
firmware/components/core/include/: input_engine.h  input_protocol.h  input_receiver.h  input_status.h  input_task.h  input_utf8.h  input_writer.h
firmware/components/device/: CMakeLists.txt  Kconfig  ble.c  config.c  display.c  hid.c  lcd_port.c  led.c  rib32.c  service.c  writer_runner.c  ws.c
firmware/components/device/cmake/: generate_firmware_version.cmake
firmware/components/device/include/: input_ble.h  input_config.h  input_display.h  input_firmware_version.h  input_hid.h  input_lcd_port.h  input_led.h  input_rib32.h  input_service.h  input_writer_runner.h  input_ws.h
firmware/components/remote_input_core/: CMakeLists.txt  remote_input_engine.c  remote_input_protocol.c  remote_input_task.c  remote_input_utf8.c  status.c
firmware/components/remote_input_core/include/: remote_input_engine.h  remote_input_protocol.h  remote_input_receiver.h  remote_input_status.h  remote_input_task.h  remote_input_utf8.h  remote_input_writer.h
firmware/components/remote_input_device/: CMakeLists.txt  Kconfig  config.c  remote_input_ble.c  remote_input_display.c  remote_input_hid.c  remote_input_lcd_panel_st7789t.c  remote_input_lcd_port.c  remote_input_led.c  remote_input_rib32.c  remote_input_service.c  remote_input_writer_runner.c  remote_input_ws.c  writer_runner.c
firmware/components/remote_input_device/cmake/: generate_firmware_version.cmake
firmware/components/remote_input_device/include/: remote_input_ble.h  remote_input_config.h  remote_input_display.h  remote_input_firmware_version.h  remote_input_hid.h  remote_input_lcd_port.h  remote_input_led.h  remote_input_rib32.h  remote_input_service.h  remote_input_writer_runner.h  remote_input_ws.h
firmware/components/remote_input_device/private_include/: remote_input_lcd_panel_st7789t.h
firmware/main/: CMakeLists.txt  ai_input_ble.c  ai_input_ble.h  ai_input_hid.c  ai_input_hid.h  ai_input_protocol.c  ai_input_status.c  ai_input_status.h  ai_input_task.c  ai_input_task.h  ai_input_utf8.h  app_main.c  idf_component.yml
sdk/: decode.html  index.html  package-lock.json  package.json  pnpm-lock.yaml  rollup.config.mjs  styles.css  tsconfig.json  vite.config.ts  vite.decoder.config.ts
sdk/src/: base32Frame.ts  bluetooth.ts  constants.ts  decoder.ts  decoderBundle.ts  device.ts  errors.ts  index.ts  protocol.ts  types.ts
sdk/src/transport/: ble.ts  types.ts  ws.ts
sdk/tests/: base32-frame.test.js  sdk-protocol.test.js
tests/: sdk-protocol.test.js
web/: ai-input-sdk.js  index.html  remote-input-sdk.js  styles.css
